2006-02-27  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setPrinterInfo): Use IPP_TAG_TEXT
	here.
	(Connection_setPrinterLocation): Likewise.

	* cupsconnection.c (do_printer_request): Use ippNewRequest().
	(Connection_getPrinters): Likewise.
	(Connection_getClasses): Likewise.
	(Connection_getPPDs): Likewise.
	(add_modify_printer_request): Likewise.
	(Connection_addPrinterToClass): Likewise.
	(Connection_deletePrinterFromClass): Likewise.

	* cupsmodule.h (ippNewRequest): Implemented, for compatibility
	with CUPS 1.1.x.

	* cupsconnection.c (get_printer_attributes_request): New function.
	(build_list_from_attribute_strings): New function.
	(Connection_getPrinterAttributes): Implemented.
	(Connection_setPrinterJobSheets): Implemented.
	(Connection_setPrinterErrorPolicy): Implemented.
	(Connection_setPrinterOpPolicy): Implemented.
	(Connection_getClasses): Use build_list_from_attribute_strings().

2006-02-23  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Better 'dist' target.

2006-02-23  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.1.

2006-02-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setPrinterPublished): Implemented.
	(Connection_getPrinters): Add 'printer-is-shared' Boolean into
	requested attributes.

	* cupsmodule.c (cups_getUser): Implemented.
	(cups_getServer): Implemented.
	(cups_getPort): Implemented.
	(cups_getEncryption): Implemented.

	* cupsppd.h (PPD): Moved this here from..
	* cupsppd.c: ..here.
	(PPD_writeFd): No longer static.
	(PPD_findOption): Implemented.

	* cupsconnection.c (Connection_addPrinter): Accept 'ppd' keyword,
	for cups.PPD object.

	* cupsppd.c (PPD_init): Open handle to PPD file.
	(PPD_dealloc): Close it.
	(PPD_writeFd): Implemented.

	* cupsmodule.c (cups_setPort): Implemented.

2006-02-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinterToClass): Implemented.
	(Connection_deletePrinterFromClass): Implemented.